// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-oz3lkq soui-divider-wrapper c-j5helr soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-oz3lkq soui-divider-wrapper c-j5helr soui-divider-horizontal cpxr668 soui-divider-with-text c-q2l2mj soui-divider-with-text-center"
  >
    <span
      class="c-x9z8q soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-oz3lkq soui-divider-wrapper c-j5helr soui-divider-horizontal cpxr668 soui-divider-with-text c-hjg3x5 soui-divider-with-text-left"
  >
    <span
      class="c-x9z8q soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-oz3lkq soui-divider-wrapper c-j5helr soui-divider-horizontal cpxr668 soui-divider-with-text coleebg soui-divider-with-text-right"
  >
    <span
      class="c-x9z8q soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
